--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,14 @@
 
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
-    <meta name="description" content="{{ site.description }}" >
-    <meta name="keywords" content="NACRE, non-proft, China, volunteer" >
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="{{ site.description }}">
+    <meta name="keywords" content="NACRE, non-proft, China, volunteer">
     <title>{{ site.title }} - {{ page.title }}</title>
-    <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css" type="text/css" >
-    <link rel="stylesheet" href="/css/main.css" type="text/css" >
+    <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/css/main.css" type="text/css">
+    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
 </head>
 
 <body>
@@ -24,6 +25,8 @@
                 </ul>
             </div>
         </nav>
+
+        <img id="header-banner" src="/assets/banner.jpg"
 
     </header>
 
