--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="NACRE, non-proft, China, volunteer">
     <title>{{ site.title }} - {{ page.title }}</title>
-    <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="/css/main.css" type="text/css">
+    <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
 </head>
 
@@ -16,18 +16,17 @@
     <header>
         <nav class="navbar top-nav">
             <div class="container-fluid">
-                <a class="navbar-item" href="#">NACRE</a>
-                <ul class="navbar-right">
-                    <li class="nav-item"><a href="#">Programs</a></li>
-                    <li class="nav-item"><a href="#">About</a></li>
-                    <li class="nav-item"><a href="#">Join</a></li>
-                    <li class="nav-item"><a href="#">Contact</a></li>
+                <a href="#">NACRE</a>
+                <ul>
+                    <li><a href="#">Programs</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Join</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </nav>
 
-        <img id="header-banner" src="/assets/banner.jpg"
-
+        <img id="header-banner" src="/assets/banner.jpg" />
     </header>
 
     <div class="container-fluid">
