update home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="NACRE, non-proft, China, volunteer">
-    <title>{{ site.title }} - {{ page.title }}</title>
+    <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
 </head>
@@ -29,36 +29,46 @@
 
 
         <div class="main-nav">
-            <div class="fullsize-header">
+            <div class="fullsize-banner">
             </div>
-            <div id="space-patch">
+            <div id="fullsize-navbg">
+                <div class="wrapper">
+                    <ul>
+                        <li id="nav-first-item">
+                            <a href="">
+                                <!--
+                                <i class="fa fa-heart-o icons" aria-hidden="true"></i>
+                                -->
+                                Programs
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <!--
+                                <i class="fa fa-search icons" aria-hidden="true"></i>
+                                -->
+                                About us
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <!--
+                                <i class="fa fa-users icons" aria-hidden="true"></i>
+                                -->
+                                Join
+                            </a>
+                        </li>
+                        <li id="nav-last-item">
+                            <a href="">
+                                <!--
+                                <i class="fa fa-envelope-o icons" aria-hidden="true"></i>
+                                -->
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <ul class="wrapper">
-                <li id="nav-first-item">
-                    <a href="">
-                        <i class="fa fa-heart-o icons" aria-hidden="true"></i>
-                        Programs
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="fa fa-search icons" aria-hidden="true"></i>
-                        About us
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="fa fa-users icons" aria-hidden="true"></i>
-                        Join
-                    </a>
-                </li>
-                <li id="nav-last-item">
-                    <a href="">
-                        <i class="fa fa-envelope-o icons" aria-hidden="true"></i>
-                        Contact
-                    </a>
-                </li>
-            </ul>
         </div>
     </header>
 
