--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,6 +18,8 @@ $text-color:       #666666;
 $background-color: #fafafa;
 $brand-color:      #666666;
 
+$prime-color:      #1BA2FC;
+
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
