--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
                     <a href="/">NACRE</a>
                 </div>
                 <ul>
-                    <li><a href="#">Programs</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Join</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="{{ site.url }}/programs">Programs</a></li>
+                    <li><a href="{{ site.url }}/about">About</a></li>
+                    <li><a href="{{ site.url }}/program-2017">Join</a></li>
+                    <li><a href="{{ site.url }}/contact-us">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -35,34 +35,22 @@
                 <div class="wrapper">
                     <ul>
                         <li id="nav-first-item">
-                            <a href="">
-                                <!--
-                                <i class="fa fa-heart-o icons" aria-hidden="true"></i>
-                                -->
+                            <a href="{{ site.url }}/programs">
                                 Programs
                             </a>
                         </li>
                         <li>
-                            <a href="">
-                                <!--
-                                <i class="fa fa-search icons" aria-hidden="true"></i>
-                                -->
+                            <a href="{{ site.url }}/about">
                                 About us
                             </a>
                         </li>
                         <li>
-                            <a href="">
-                                <!--
-                                <i class="fa fa-users icons" aria-hidden="true"></i>
-                                -->
+                            <a href="{{ site.url }}/program-2017">
                                 Join
                             </a>
                         </li>
                         <li id="nav-last-item">
-                            <a href="">
-                                <!--
-                                <i class="fa fa-envelope-o icons" aria-hidden="true"></i>
-                                -->
+                            <a href="{{ site.url }}/contact-us">
                                 Contact
                             </a>
                         </li>
@@ -78,43 +66,44 @@
     </div>
 
 
-    <footer>
-        <section id="footer-area">
-            <div class="container-fluid wrapper">
-                <div class="row">
-                    <div class="col-md-3 col-xs-12">
-                        <b>About</b>
-                        <ul>
-                            <li>about1</li>
-                            <li>about2</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 col-xs-12">
-                        <b>Programs</b>
-                        <ul>
-                            <li>program1</li>
-                            <li>program2</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 col-xs-12">
-                        <b>Join</b>
-                        <ul>
-                            <li>join1</li>
-                            <li>join2</li>
-                            <li>join3</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 col-xs-12">
-                        <b>Contact</b>
-                        <ul>
-                            <li>contact</li>
-                            <li>contact</li>
-                            <li>contact</li>
-                        </ul>
-                    </div>
+    <div class="fullsize-white-bottom container-fluid">
+    </div>
+
+    <footer class="ft container-fluid">
+        <div class="wrapper">
+            <div class="row">
+                <div class="col-md-3 col-xs-12">
+                    <b>About</b>
+                    <ul>
+                        <li>about1</li>
+                        <li>about2</li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-xs-12">
+                    <b>Programs</b>
+                    <ul>
+                        <li>program1</li>
+                        <li>program2</li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-xs-12">
+                    <b>Join</b>
+                    <ul>
+                        <li>join1</li>
+                        <li>join2</li>
+                        <li>join3</li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-xs-12">
+                    <b>Contact</b>
+                    <ul>
+                        <li>contact</li>
+                        <li>contact</li>
+                        <li>contact</li>
+                    </ul>
                 </div>
             </div>
-        </section>
+        </div>
     </footer>
 </body>
 </html>
