--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,45 +61,67 @@
     </header>
 
 
-    <div class="wrapper">
+    <div class="wrapper main">
         {{ content }}
     </div>
 
 
-    <div class="fullsize-white-bottom container-fluid">
-    </div>
+    <section id="pre-footer-white">
+        <div class="fullsize-white-bottom container-fluid">
+        </div>
+    </section>
 
-    <footer class="ft container-fluid">
-        <div class="wrapper">
-            <div class="row">
-                <div class="col-md-3 col-xs-12">
-                    <b>About</b>
-                    <ul>
-                        <li>about1</li>
-                        <li>about2</li>
-                    </ul>
+    <footer class="container-fluid">
+        <div class="ft">
+            <div class="wrapper">
+                <div class="row">
+                    <div class="col-md-3">
+                        <b>About</b>
+                        <ul>
+                            <li>about1</li>
+                            <li>about2</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <b>Programs</b>
+                        <ul>
+                            <li>program1</li>
+                            <li>program2</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <b>Join</b>
+                        <ul>
+                            <li>join1</li>
+                            <li>join2</li>
+                            <li>join3</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <b>Contact</b>
+                        <ul>
+                            <li>contact</li>
+                            <li>contact</li>
+                            <li>contact</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-md-3 col-xs-12">
-                    <b>Programs</b>
-                    <ul>
-                        <li>program1</li>
-                        <li>program2</li>
-                    </ul>
+            </div>
+        </div>
+        <div class="ft-info">
+            <div class="wrapper">
+                <div class="copyright">
+                    &copy NACRE
                 </div>
-                <div class="col-md-3 col-xs-12">
-                    <b>Join</b>
+
+                <div class="social-network">
+                    Share:
                     <ul>
-                        <li>join1</li>
-                        <li>join2</li>
-                        <li>join3</li>
-                    </ul>
-                </div>
-                <div class="col-md-3 col-xs-12">
-                    <b>Contact</b>
-                    <ul>
-                        <li>contact</li>
-                        <li>contact</li>
-                        <li>contact</li>
+                        <li>
+                            <a href="https://www.facebook.com/nacrepage/" id="fb-icon" title="Facebook">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
