--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -18,7 +18,8 @@
         .cta-title {
             color: $white-color;
             // background-color: $prime-color;
-            background-color: $grey-color-dark;
+            // background-color: $grey-color-dark;
+            background-color: $header-bg-color;
             font-size: 17px;
             text-transform: uppercase;
             font-weight: 400;
