--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -47,8 +47,8 @@
 
 
 .main-nav{
-
     border-bottom: 1px solid $grey-color-light;
+    margin-bottom: 40px;
 
     .fullsize-banner {
         background: url("/assets/banner.jpg") $white-color center top no-repeat;
@@ -113,18 +113,106 @@
     }
 }
 
+.container-fluid {
+
+}
+
 .fullsize-white-bottom {
     background-color: $white-color;
     height: 100px;
-    margin-top: $spacing-unit * 3;
+    margin: $spacing-unit * 3 0 0 0;
+    padding: 0 0 0 0;
+}
+
+.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .ft {
     background-color: $header-bg-color;
     color: $white-color;
-    height: 300px;
+    width: 100%;
+    height: 200px;
 
     .row {
         padding-top: $spacing-unit;
+
+        // not wrap when mobile
+        flex-wrap: nowrap;
+    }
+
+    ul {
+        list-style: none;
+        margin-top: 10px;
+        margin-left: 0px;
+    }
+
+}
+
+.ft-info {
+    background-color: $header-bg-color;
+    color: $white-color;
+    width: 100%;
+    height: 60px;
+
+    border-top: 1px solid $grey-color-dark;
+
+    .wrapper {
+        height: 100%;
+    }
+
+    .copyright {
+        display: inline-block;
+        padding-top: 20px;
+    }
+
+    .social-network {
+        float: right;
+        padding-top: 15px;
+
+        ul {
+            margin-left: 5px;
+            list-style: none;
+            display: inline;
+
+            li {
+                display: inline;
+                margin: 0 5px 0 0 ;
+
+                a {
+                    display: inline-block;
+                    position: relative;
+                    margin-top: 0;
+                    margin-bottom: 0;
+                    margin-left: auto;
+                    margin-right: auto;
+                    -webkit-border-radius:50%;
+                    border-radius:50%;
+                    text-align:center;
+                    width: 30px;
+                    height: 30px;
+                    font-size:16px;
+                }
+
+                i {
+                    color: $header-bg-color;
+                    line-height: 30px;
+                    text-align: center;
+                    margin: 0;
+                }
+            }
+        }
+
+        a {
+            background-color: $white-color;
+        }
+    }
+
+    .social-network a#fb-icon:hover {
+        i {
+            color: $white-color;
+        }
+        background-color: $fb-icon-color;
     }
 }
