--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -120,7 +120,7 @@
 .fullsize-white-bottom {
     background-color: $white-color;
     height: 100px;
-    margin: $spacing-unit * 3 0 0 0;
+    margin: 200px 0 0 0;
     padding: 0 0 0 0;
 }
 
