--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -1,3 +1,10 @@
+ul {
+    list-style: square;
+    margin-top:20px;
+    margin-bottom: 60px;
+}
+
+
 form {
     line-height: 27px;
 }
@@ -12,7 +19,7 @@ form, input, textarea {
 input {
     border: none;
     border-bottom: 1px solid $grey-color;
-    padding: 5px 12px;
+    padding: 5px 12px 0px 12px;
     background-color: $background-color;
 }
 
@@ -40,6 +47,7 @@ button {
     background-color: $black-color;
     border: none;
     padding: 4px 25px;
+    transition: 0.2s background-color ease-out;
 }
 
 button:hover {
