fix anchor and hash

--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -20,22 +20,22 @@ layout: default
             </li>
         </a>
         <ul class="sub-menu" id="left-nav-join-sub">
-            <a href="{{ site.url }}/program-{{ site.currentProgramYear }}/#key-dates-{{ site.currentProgramYear }}">
+            <a href="{{ site.url }}/program-{{ site.currentProgramYear }}#key-dates-{{ site.currentProgramYear }}">
                 <li class="sub-menu-item">
                     Key dates
                 </li>
             </a>
-            <a href="{{ site.url }}/program-{{ site.currentProgramYear }}/#costs-{{ site.currentProgramYear }}">
+            <a href="{{ site.url }}/program-{{ site.currentProgramYear }}#costs-{{ site.currentProgramYear }}">
                 <li class="sub-menu-item">
                     Costs
                 </li>
             </a>
-            <a href="{{ site.url }}/program-{{ site.currentProgramYear }}/#positions-{{ site.currentProgramYear }}">
+            <a href="{{ site.url }}/program-{{ site.currentProgramYear }}#positions-{{ site.currentProgramYear }}">
                 <li class="sub-menu-item">
                     Positions
                 </li>
             </a>
-            <a href="{{ site.url }}/program-{{ site.currentProgramYear }}/#application-{{ site.currentProgramYear }}">
+            <a href="{{ site.url }}/program-{{ site.currentProgramYear }}#application-{{ site.currentProgramYear }}">
                 <li class="sub-menu-item">
                     Application process
                 </li>
